# UltimMC

./: .gitignore  BUILD.md  CMakeLists.txt  README.md
.github/workflows/: main.yml
buildconfig/: BuildConfig.cpp.in  BuildConfig.h
launcher/: AuthServer.cpp  CMakeLists.txt  LaunchController.cpp
launcher/minecraft/: MinecraftInstance.cpp  VersionFilterData.cpp  VersionFilterData.h
launcher/minecraft/auth/: AccountData.cpp  AccountData.h  AuthProviders.cpp  MinecraftAccount.cpp  MinecraftAccount.h
launcher/minecraft/auth/flows/: Elyby.cpp  Local.cpp  Local.h
launcher/minecraft/auth/providers/: LocalAuthProvider.h
launcher/minecraft/auth/steps/: ElybyProfileStep.cpp  LocalStep.cpp  LocalStep.h
launcher/minecraft/launch/: VerifyJavaInstall.cpp
launcher/ui/dialogs/: LocalLoginDialog.cpp  LocalLoginDialog.h  LocalLoginDialog.ui  LoginDialog.cpp  LoginDialog.ui
launcher/ui/pages/global/: AccountListPage.cpp  AccountListPage.h  AccountListPage.ui
secrets/: CMakeLists.txt  Secrets.cpp
